--- a/templates/view/panicpage/index.html
+++ b/templates/view/panicpage/index.html
@@ -1236,7 +1236,7 @@
             <div class="enter">扫描进入</div>
         </div>
     </div>
-    <div class="to-top">TOP</div>
+    <div class="to-top" onclick="window.scrollTo('0','0');">TOP</div>
 </div>
 <div class="kf-wrap">
     <a class="kf-support-btn" onclick="NTKF.im_openInPageChat('kf_9566_1493358830761')">
