--- a/templates/view/firstpage/index.html
+++ b/templates/view/firstpage/index.html
@@ -21,11 +21,11 @@
 <!--<iframe class="iframecontent" frameborder=0 width="100%" height="100%" src="../header/index.html"
         style="min-width: 1200px;clear: both;"></iframe>-->
 
-<iframe class="iframecontent" frameborder=0 width="100%" scrolling="no" src="../header/index.html" style="min-width: 1200px;min-height: 249px;"></iframe>
+<iframe id="iframecontent" class="iframecontent" frameborder=0 width="100%" scrolling="no" src="../header/index.html" style="min-width: 1200px;min-height: 249px;"></iframe>
 
 <!--中间的内容开始-->
-<div class=" out-wrap clearfix" >
-    <div class="specify" >
+<div   class=" out-wrap clearfix" >
+    <div id="specify" class="specify" >
         <div class="navs clearfix">
             <div class="all-in">
                 <span class="icon icon-func"></span>全部商品分类
@@ -873,8 +873,8 @@
              </div>&lt;!&ndash;1F结束&ndash;&gt;-->
 
 
-            <div class="qianggougoods clearfix" style="" id="qianggouMod">
-                <a href="#" class="count-down">
+            <div class="qianggougoods clearfix" style="" id="0F">
+                <a href="#" class=" count-down">
                     <p class="count-down-tips">本场剩余</p>
                     <div class="count-time">
                         <span class="clock-time time-hour">00</span>
@@ -1007,8 +1007,8 @@
                         </ul>
                     </div>
                 </div>
-
-            </div><!--qianggougoodsend-->
+                <div class="clearfix"></div>
+            </div><!--限时抢购 qianggougoods-->
 
 
             <div class="benifits-goods  clearfix" id="1F">
@@ -2443,6 +2443,7 @@
                             </a>
                             <a class="enter-btn" href="#" target="_blank" >进入专场</a>
                         </div>
+
                     </div>
                     <div class="hotSale-item J-hotSale-item">
                         <a class="hotSale-brand-img-box" href="#" target="_blank">
@@ -2562,6 +2563,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="clearfix"></div>
             </div><!--3F结束-->
 
             <div class="benifits-goods  clearfix" id="4F">
@@ -2730,11 +2732,12 @@
                     </div>
                 </div>
             </div>
-        </div><!--3F结束-->
+                <div class="clearfix"></div>
+        </div><!--4F结束-->
 
 
 
-            <div class="benifits-goods  new-products clearfix" id="8F" >
+            <div class="benifits-goods  new-products clearfix" id="5F" >
                 <div class="title">新品推荐
                 </div>
                 <div class="block  clearfix">
@@ -2972,7 +2975,7 @@
                     </div>
                 </div><!--block end-->
 
-            </div><!--benifits-goods end  8F结束-->
+            </div><!--benifits-goods end  5F结束-->
 
 
             <!--猜你喜欢-->
@@ -3054,6 +3057,23 @@
     </div><!--floors 结束-->
 
 </div><!--out-wrap end-->
+
+<!--右侧导航栏-->
+<div id="side-bar" class="elevator-box" style="display: none;">
+    <div id="lift" class="elevator">
+        <a href="#0F" class="on">限时抢购</a>
+        <a href="#1F">超值单品</a>
+        <a href="#2F">官网大促</a>
+        <a href="#3F">啤酒专场</a>
+        <a href="#4F">精选白酒</a>
+        <a href="#5F">新品推荐</a>
+    </div>
+    <div id="gomain" class="back-top icon" onclick="window.scrollTo('0','0');">
+    </div>
+</div>
+
+
+
 
 <!--版权信息代码-->
 <div class="new-footer clearfix" >
