--- a/templates/view/login/login.html
+++ b/templates/view/login/login.html
@@ -181,11 +181,11 @@
                 </div>
             </div>
         </div>
-        <div class="login-banner" style="background-color: #e93854">
+        <div class="login-banner" style="background-color: #f5f5f5">
             <div class="w">
                 <div id="banner-bg" class="i-inner"
-                     style="background-color: #e93854">
-                    <!--          background: url(../../images/login/5731485aN1134b4f0.png) 0px 0px no-repeat-->
+                     style="background-color: #f5f5f5;">
+                    <!--          -->
 
                 </div>
             </div>
