--- a/templates/view/msales/index.html
+++ b/templates/view/msales/index.html
@@ -615,8 +615,8 @@
                 </div><!--specials end-->
                 <div class="list fl">
                     <a class="icon prev" href="javascript:;"></a>
-                    <a class="icon next" href="special/1013/0" data-url="special/1013/0" target="_blank"></a>
-                    <div style="width: 1200px;">
+                    <a class="icon next" href="javascript:;"  target="_blank"></a>
+                    <div class="imgitems" style="width: 1200px;">
                         <a class="item" target="_blank" href="#">
                             <div class="picture icon"
                                   style="background-image: url('../../images/msales/good_1.jpg');width: 198px;height: 248px;">
@@ -685,8 +685,8 @@
                 </div><!--specials end-->
                 <div class="list fl">
                     <a class="icon prev" href="javascript:;"></a>
-                    <a class="icon next" href="special/1013/0" data-url="special/1013/0" target="_blank"></a>
-                    <div style="width: 1200px;">
+                    <a class="icon next" href="javascript:;"  target="_blank"></a>
+                    <div class="imgitems" style="width: 1200px;">
                         <a class="item" target="_blank" href="#">
                             <div class="picture icon"
                                  style="background-image: url('../../images/msales/good_1.jpg');width: 198px;height: 248px;">
@@ -754,8 +754,8 @@
                 </div><!--specials end-->
                 <div class="list fl">
                     <a class="icon prev" href="javascript:;"></a>
-                    <a class="icon next" href="special/1013/0" data-url="special/1013/0" target="_blank"></a>
-                    <div style="width: 1200px;">
+                    <a class="icon next" href="javascript:;"  target="_blank"></a>
+                    <div class="imgitems" style="width: 1200px;">
                         <a class="item" target="_blank" href="#">
                             <div class="picture icon"
                                  style="background-image: url('../../images/msales/good_1.jpg');width: 198px;height: 248px;">
@@ -823,8 +823,8 @@
                 </div><!--specials end-->
                 <div class="list fl">
                     <a class="icon prev" href="javascript:;"></a>
-                    <a class="icon next" href="special/1013/0" data-url="special/1013/0" target="_blank"></a>
-                    <div style="width: 1200px;">
+                    <a class="icon next" href="javascript:;"  target="_blank"></a>
+                    <div class="imgitems" style="width: 1200px;">
                         <a class="item" target="_blank" href="#">
                             <div class="picture icon"
                                  style="background-image: url('../../images/msales/good_1.jpg');width: 198px;height: 248px;">
@@ -892,8 +892,8 @@
                 </div><!--specials end-->
                 <div class="list fl">
                     <a class="icon prev" href="javascript:;"></a>
-                    <a class="icon next" href="special/1013/0" data-url="special/1013/0" target="_blank"></a>
-                    <div style="width: 1200px;">
+                    <a class="icon next" href="javascript:;"  target="_blank"></a>
+                    <div class="imgitems" style="width: 1200px;">
                         <a class="item" target="_blank" href="#">
                             <div class="picture icon"
                                  style="background-image: url('../../images/msales/good_1.jpg');width: 198px;height: 248px;">
@@ -1037,7 +1037,8 @@
     <div class="statement clearfix">© 2011-2017 XXXXX网络科技有限公司 备11021445号</div>
 </div>
 
-
+<script type="text/javascript" src="../../../templates/js/module/js/myjslib.js"></script>
+<script type="text/javascript" src="../../../templates/js/module/js/msales.js"></script>
 <!--<iframe class="iframecontent"  frameborder=0 width="100%" src="../footer/index.html" style="min-width: 1200px;min-height: 309px;margin-bottom: 0px;">-->
 <script>
     var oAllin = document.getElementById('allIn');
